sections with class main-section

--- a/index.html
+++ b/index.html
@@ -11,5 +11,10 @@
     <main id="main-doc">
 
     </main>
+    <section class="main-section"></section>
+    <section class="main-section"></section>
+    <section class="main-section"></section>
+    <section class="main-section"></section>
+    <section class="main-section"></section>
 </body>
 </html>
