within first section a header added.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main id="main-doc">
 
     </main>
-    <section class="main-section"></section>
+    <section class="main-section"><header>Introduction</header></section>
     <section class="main-section"></section>
     <section class="main-section"></section>
     <section class="main-section"></section>
