error text fixed.

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                <article>
                    <h2>The Anatomy of an HTML Element</h2>
                     <p>Lets explore the paragraph element a bit...
-                        <code>&lt;p&gt;My cat is very grumpy.&lt;/p&gt;</code>
+                        <code>&lt;p&gt;My dog is very strong.&lt;/p&gt;</code>
                     </p>
                     
                    
