--- a/index.html
+++ b/index.html
@@ -133,10 +133,7 @@
 	                                        color: red;
 	                                    }</code>
 	                            </p>
-	                            <p>The first rule starts with an h1 selector, which means that it will apply its property
-	                                values to the &lt;h1&gt; element. It contains three properties and their values (each
-	                                property/value pair is called a declaration):
-	                            La primera regla comienza con un selector h1, lo que significa que aplicará sus valores de propiedad al elemento &lt;h1&gt;. Contiene tres propiedades y sus valores (cada par de propiedad / valor se llama declaración):
+	                            <p>La primera regla comienza con un selector h1, lo que significa que aplicará sus valores de propiedad al elemento &lt;h1&gt;. Contiene tres propiedades y sus valores (cada par de propiedad / valor se llama declaración):
 	                        	</p>
 	                                <ol>
 	                                    <li>El primero establece el color del texto en azul.</li>
