html details fixed.

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 	                <header>Referencias</header>
 	                <article>
 	                    <li>Toda la documentación de esta página es extraída de
-	                        <a href="https://developer.mozilla.org/en-US/docs/Learn/HTML" target="_blank">aquí</a> y 
+	                        <a href="https://developer.mozilla.org/en-US/docs/Learn/HTML" target="_blank">aquí</a> y de 
 	                 		<a href="https://developer.mozilla.org/en-US/docs/Learn/CSS" target="_blank">aquí</a> en 
 	                        <a href="https://developer.mozilla.org/en-US/MDN" target="_blank">MDN</a>.
 	                    </li>
