html details fixed.

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 	              <article>
 	                  <h2>¿Qué es CSS?</h2>
 	              <p>CSS (Cascading Style Sheets / hojas de estilo en cascada) es un lenguaje para especificar cómo se presentan los documentos a los usuarios - cómo se diseñan, distribuyen, etc. Le permite crear páginas web de gran apariencia, pero ¿cómo funciona bajo el capó? ¿Cómo convierte el navegador HTML en un modelo de objetos de documento (DOM), ¿cómo se aplica CSS a partes del DOM y qué código se utiliza para incluir realmente nuestro CSS en nuestra página web?
-	                  <br>A CSS stylesheet is applied to the HTML using a &lt;link&gt; element within the &lt;head&gt; tag. For example:
-	                  Se aplica una hoja de estilo CSS al HTML mediante un elemento &lt;link&gt; dentro de la etiqueta &lt;head&gt;. Por ejemplo:
+                      <br>
+                      Se aplica una hoja de estilo CSS al HTML mediante un elemento &lt;link&gt; dentro de la etiqueta &lt;head&gt;. Por ejemplo:
 	                  <code> &lt;link rel="stylesheet" href="style.css"&gt;</code></p>
 	                  <h2>¿Cómo afecta CSS a HTML?</h2>
 	                  <p>Los navegadores web aplican reglas CSS a un documento para afectar cómo se muestran. Un conjunto de reglas CSS contenidas en una hoja de estilo determina cómo debe verse una página web. Una regla CSS se forma a partir de:
@@ -82,7 +82,7 @@
 	        <section class="main-section" id="sintaxis_de_html">
 	               <header>Sintaxis de HTML</header>
 	               <article>
-	                   <h2>La anatomy de un elemento HTML</h2>
+	                   <h2>La anatomía de un elemento HTML</h2>
 	                    <p>Vamos a explorar el elemento parrafo un pocoLets explore the paragraph element a bit...
 	                        <code>&lt;p&gt;Mi perro es muy fuerte.&lt;/p&gt;</code>
 	                    </p>
