html details fixed.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<body>
 	    
 	    <nav id="navbar">
-	        <header>Documentación de HTML & CSS</header>
+	        <header>Documentación de HTML + CSS</header>
 	        <ul>
 	            <a href="#introduction" class="nav-link"><li>Introducción</li></a>
 	            <a href="#introduccion_a_html" class="nav-link">
