html details fixed.

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 				</p>
 	            <ul>
 	                 <li>Por ejemplo, solo mirarlo y consumir contenido en la web.</li>
-	                 <li>Debe tener configurado un entorno de trabajo básico (navegador web y editor de texto).</li>
+	                 <li>Debe tener configurado un entorno de trabajo básico [navegador web y editor de texto].</li>
 	                 <li>También comprende cómo crear y administrar archivos.</li>
 	             </ul>   
-	            <p>CSS (Cascading Style Sheets / hojas de estilo en cascada) se utiliza para diseñar y estilizar páginas web, por ejemplo, para modificar la fuente, el color, el tamaño y el espaciado de su contenido, dividirlo en varias columnas o agregar animaciones y otras características decorativas. Antes de comenzar, debe tener:</p>
+	            <p>CSS [Cascading Style Sheets / hojas de estilo en cascada] se utiliza para diseñar y estilizar páginas web, por ejemplo, para modificar la fuente, el color, el tamaño y el espaciado de su contenido, dividirlo en varias columnas o agregar animaciones y otras características decorativas. Antes de comenzar, debe tener:</p>
 	            <ul>
 	                <li>Familiaridad básica con el uso de computadoras y el uso pasivo de la Web.</li>
 	                <li>Un entorno de trabajo básico configurado como se detalla en Instalación de software básico y conocimientos sobre cómo crear y administrar archivos.</li>
@@ -52,7 +52,7 @@
 	             <header>Introducción a HTML</header>
 	             <article>
 	                 <h2>¿Qué es HTML?</h2>
-	             <p>HTML (Hypertext Markup Language / lenguaje de marcado de hipertexto) no es un lenguaje de programación; es un lenguaje de marcado que se utiliza para indicarle a su navegador cómo estructurar las páginas web que visita. Puede ser tan complicado o tan simple como lo desee el desarrollador web. HTML consta de una serie de elementos que se utilizan para encerrar, ajustar o marcar diferentes partes del contenido para que aparezca o actúe de cierta manera. Las etiquetas adjuntas pueden convertir un poco de contenido en un hipervínculo para vincularlo a otra página en la web, poner palabras en cursiva, etc. Por ejemplo, tome la siguiente línea de contenido:
+	             <p>HTML [Hypertext Markup Language / lenguaje de marcado de hipertexto] no es un lenguaje de programación; es un lenguaje de marcado que se utiliza para indicarle a su navegador cómo estructurar las páginas web que visita. Puede ser tan complicado o tan simple como lo desee el desarrollador web. HTML consta de una serie de elementos que se utilizan para encerrar, ajustar o marcar diferentes partes del contenido para que aparezca o actúe de cierta manera. Las etiquetas adjuntas pueden convertir un poco de contenido en un hipervínculo para vincularlo a otra página en la web, poner palabras en cursiva, etc. Por ejemplo, tome la siguiente línea de contenido:
 	             <br> Mi nombre es Alejandro Osorio Velasco.
 	             <br>
 	            	<code>&lt;p&gt;Mi nombre es Alejandro Osorio Velasco.&lt;/p&gt;</code></p>
@@ -64,7 +64,7 @@
 	              <header>Introducción a CSS</header>
 	              <article>
 	                  <h2>¿Qué es CSS?</h2>
-	              <p>CSS (Cascading Style Sheets / hojas de estilo en cascada) es un lenguaje para especificar cómo se presentan los documentos a los usuarios - cómo se diseñan, distribuyen, etc. Le permite crear páginas web de gran apariencia, pero ¿cómo funciona bajo el capó? ¿Cómo convierte el navegador HTML en un modelo de objetos de documento (DOM), ¿cómo se aplica CSS a partes del DOM y qué código se utiliza para incluir realmente nuestro CSS en nuestra página web?
+	              <p>CSS [Cascading Style Sheets / hojas de estilo en cascada] es un lenguaje para especificar cómo se presentan los documentos a los usuarios - cómo se diseñan, distribuyen, etc. Le permite crear páginas web de gran apariencia, pero ¿cómo funciona bajo el capó? ¿Cómo convierte el navegador HTML en un modelo de objetos de documento [DOM], ¿cómo se aplica CSS a partes del DOM y qué código se utiliza para incluir realmente nuestro CSS en nuestra página web?
                       <br>
                       Se aplica una hoja de estilo CSS al HTML mediante un elemento &lt;link&gt; dentro de la etiqueta &lt;head&gt;. Por ejemplo:
 	                  <code> &lt;link rel="stylesheet" href="style.css"&gt;</code></p>
@@ -89,7 +89,7 @@
 	                    
 	                   <p>Las principales partes de este elemento son:</p>
 	                   <ol>
-	                       <li>La etiqueta de apertura: Consiste en el nombre del elemento (en este caso, p), envuelto entre paréntesis angulares de apertura y cierre. Esto indica dónde comienza o empieza a surtir efecto el elemento, en este caso, dónde está el comienzo del párrafo.</li>
+	                       <li>La etiqueta de apertura: Consiste en el nombre del elemento [en este caso, p], envuelto entre paréntesis angulares de apertura y cierre. Esto indica dónde comienza o empieza a surtir efecto el elemento, en este caso, dónde está el comienzo del párrafo.</li>
 	                       <li>La etiqueta de cierre: es la misma que la etiqueta de apertura, excepto que incluye una barra inclinada antes del nombre del elemento. Esto indica dónde termina el elemento, en este caso, dónde está el final del párrafo. No incluir una etiqueta de cierre es un error común para principiantes y puede dar lugar a resultados extraños.
 	                       </li>
 	                       <li>El contenido: este es el contenido del elemento, que en este caso es solo texto.
@@ -104,7 +104,7 @@
 	                <header>Sintaxis CSS</header>
 	                <article>
 	                <h2>La anatomía de una propiedad de CSS</h2>
-	                <p>En primer lugar, tomemos un documento HTML simple, que contiene una &lt;h1&gt; y una &lt;p&gt; (observe que se aplica una hoja de estilo al HTML mediante un elemento):
+	                <p>En primer lugar, tomemos un documento HTML simple, que contiene una &lt;h1&gt; y una &lt;p&gt; [observe que se aplica una hoja de estilo al HTML mediante un elemento]:
 	                            <br>
 	                            <code>
 	                                &lt;!DOCTYPE html&gt;
@@ -133,12 +133,12 @@
 	                                        color: red;
 	                                    }</code>
 	                            </p>
-	                            <p>La primera regla comienza con un selector h1, lo que significa que aplicará sus valores de propiedad al elemento &lt;h1&gt;. Contiene tres propiedades y sus valores (cada par de propiedad / valor se llama declaración):
+	                            <p>La primera regla comienza con un selector h1, lo que significa que aplicará sus valores de propiedad al elemento &lt;h1&gt;. Contiene tres propiedades y sus valores [cada par de propiedad / valor se llama declaración]:
 	                        	</p>
 	                                <ol>
 	                                    <li>El primero establece el color del texto en azul.</li>
 	                                    <li>El segundo establece el color de fondo en amarillo.</li>
-	                                    <li>El tercero coloca un borde alrededor del encabezado de 1 píxel de ancho, sólido (no punteado, discontinuo, etc.) y de color negro.</li>
+	                                    <li>El tercero coloca un borde alrededor del encabezado de 1 píxel de ancho, sólido [no punteado, discontinuo, etc.] y de color negro.</li>
 	                                </ol>
 	                                <p>La segunda regla comienza con un selector p, lo que significa que aplicará sus valores de propiedad al elemento &lt;p&gt;. Contiene una declaración, que establece el color del texto en rojo.</p>
 	                                    
