html details fixed.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	                 <li>Debe tener configurado un entorno de trabajo básico [navegador web y editor de texto].</li>
 	                 <li>También comprende cómo crear y administrar archivos.</li>
 	             </ul>   
-	            <p>CSS [Cascading Style Sheets / hojas de estilo en cascada] se utiliza para diseñar y estilizar páginas web, por ejemplo, para modificar la fuente, el color, el tamaño y el espaciado de su contenido, dividirlo en varias columnas o agregar animaciones y otras características decorativas. Antes de comenzar, debe tener:</p>
+	            <p>CSS se utiliza para diseñar y estilizar páginas web, por ejemplo, para modificar la fuente, el color, el tamaño y el espaciado de su contenido, dividirlo en varias columnas o agregar animaciones y otras características decorativas. Antes de comenzar, debe tener:</p>
 	            <ul>
 	                <li>Familiaridad básica con el uso de computadoras y el uso pasivo de la Web.</li>
 	                <li>Un entorno de trabajo básico configurado como se detalla en Instalación de software básico y conocimientos sobre cómo crear y administrar archivos.</li>
