html details fixed.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	             <br> Mi nombre es Alejandro Osorio Velasco.
 	             <br>
 	            	<code>&lt;p&gt;Mi nombre es Alejandro Osorio Velasco.&lt;/p&gt;</code></p>
-	                <p>** Nota: Las etiquetas en HTML no distinguen entre mayúsculas y minúsculas, es decir, pueden escribirse en mayúsculas o minúsculas. Por ejemplo, una etiqueta &lt;title&gt; podría escribirse como &lt;title&gt;, &lt;TITLE&gt;, &lt;Title&gt;, &lt;TiTlE&gt;, etc. y funcionará bien. La mejor práctica, sin embargo, es escribir todas las etiquetas en minúsculas por razones de coherencia, legibilidad por otras razones. **</p>
+	                <p>* Nota: Las etiquetas en HTML no distinguen entre mayúsculas y minúsculas, es decir, pueden escribirse en mayúsculas o minúsculas. Por ejemplo, una etiqueta &lt;title&gt; podría escribirse como &lt;title&gt;, &lt;TITLE&gt;, &lt;Title&gt;, &lt;TiTlE&gt;, etc. y funcionará bien. La mejor práctica, sin embargo, es escribir todas las etiquetas en minúsculas por razones de coherencia, legibilidad por otras razones.</p>
 	             </article>
 	         </section>
 	         
@@ -83,7 +83,7 @@
 	               <header>Sintaxis de HTML</header>
 	               <article>
 	                   <h2>La anatomía de un elemento HTML</h2>
-	                    <p>Vamos a explorar el elemento parrafo un pocoLets explore the paragraph element a bit...
+	                    <p>Vamos a explorar el elemento parrafo un poco:
 	                        <code>&lt;p&gt;Mi perro es muy fuerte.&lt;/p&gt;</code>
 	                    </p>
 	                    
